# rusty-things

src/actix-di/: Cargo.toml
src/actix-di/src/: main.rs
src/basics/src/: iterables.rs  main.rs
src/bitwise_things/: Cargo.toml  README.md
src/bitwise_things/benches/: my_benchmark.rs
src/bitwise_things/src/: lib.rs  main.rs
src/egui_graphs_wasm/: .gitignore  Cargo.toml  README.md
src/egui_graphs_wasm/src/: main.rs  wasm_time.rs
src/hello_tcp/: hello.html
src/hello_tcp/src/: lib.rs  main.rs
src/lifetimes/src/: main.rs
src/ngauge/: Cargo.toml  README.md
src/ngauge/examples/py-gauge/: .gitignore  py-gauge.py
src/ngauge/examples/py-gauge/example/: __init__.py
src/ngauge/examples/py-gauge/wit/: world.wit
src/ngauge/examples/rs-gauge/: Cargo.toml
src/ngauge/examples/rs-gauge/src/: bindings.rs  lib.rs
src/ngauge/examples/rs-gauge/wit/: world.wit
src/ngauge/ngauge-wasi/: Cargo.toml
src/ngauge/ngauge-wasi/src/: discovery.rs  host.rs  main.rs
src/ngauge/rs-metric/: Cargo.toml
src/ngauge/rs-metric/src/: main.rs
