[package]
name = "ngauge-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
wasi-common = "17.0.1"
async-std = { version = "1.12.0", features = ["attributes"] }